# SimplePluginFramework

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml  pre-commit.yml
API/PluginMount/: index.html
Guides/HelloWorld/: index.html
Notebooks/HelloWorld/: index.html
changelog/: index.html
docs/API/: PluginMount.md
docs/Guides/: Fundamentals.md  HelloWorld.md
docs/Notebooks/: HelloWorld.ipynb
search/: search_index.json
src/spf/: PluginMount.py
