[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-plugin-framework"
version = "0.1.0"
description = "A Simple Plugin Framework"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pdoc3",
    "black",
    "ipykernel",
    "jupyter",
    "notebook",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
    "ruff",
    "pydocstringformatter",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
